--- a/Web.config
+++ b/Web.config
@@ -6,20 +6,27 @@
 <configuration>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
+
+    <customErrors mode="Off" />
+    
+  <!--  <authentication mode="None"/> -->
+
+    <anonymousIdentification enabled="true" />
+    <authentication mode="Forms" />
+   
+    
+    
     <httpRuntime targetFramework="4.5" />
   <pages>
       <controls>
-        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
-      <add tagPrefix="c" namespace="Web.Ajax.Controls" assembly="Web.Ajax" /></controls>
-    </pages><httpHandlers>
-        	<remove verb="*" path="resource.axd" />
-        	<add verb="GET,HEAD" path="resource.axd" type="Web.Ajax.Handlers.Resource" validate="true" />
-        </httpHandlers></system.web>
+        
+      
+        
+      
+  <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" /></controls>
+    </pages></system.web>
 <system.webServer>
-        <handlers>
-            <add name="ResourceHandler" path="resource.axd" verb="*" type="Web.Ajax.Handlers.Resource,Web.Ajax" resourceType="Unspecified" preCondition="integratedMode" />
-        </handlers>
-		
-        <validation validateIntegratedModeConfiguration="false"/>
-    
+        
+  <validation validateIntegratedModeConfiguration="false" />
+  
     </system.webServer></configuration>
